# DecisionTree

./: CMakeLists.txt  LICENSE  README.md
decision_tree/: decision_tree.hpp  decision_tree_classifier.hpp
decision_tree/algorithm/: CMakeLists.txt  decision_tree_classifier.hpp
decision_tree/common/: CMakeLists.txt  prereqs.hpp
decision_tree/core/: CMakeLists.txt  builder.hpp  criterion.hpp  splitter.hpp  tree.hpp
decision_tree/core/criterion/: CMakeLists.txt  base.hpp  entropy.hpp  gini.hpp
decision_tree/utility/: CMakeLists.txt  math.hpp  random.hpp  sort.hpp
decision_tree/utils/: random.hpp  sort.hpp
example/: example.cpp  example1.cpp  example2.cpp
examples/: example1.cpp  example2.cpp  example3.cpp
src/decision_tree/: prereqs.hpp
src/decision_tree/core/: criterion.hpp  splitter.hpp  tree.hpp
src/decision_tree/utils/: random.hpp  sort.hpp
tests/: CMakeLists.txt  test_builder.cpp  test_criterion.cpp  test_criterion_gini.cpp  test_math.cpp  test_sort.cpp  test_splitter.cpp  test_tree.cpp
